tests/ui/traits/non_lifetime_binders/capture-late-ct-in-anon.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-late-ct-in-anon.rs:1:12
   |
LL | #![feature(non_lifetime_binders, generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-late-ct-in-anon.rs:1:34
   |
LL | #![feature(non_lifetime_binders, generic_const_exprs)]
   |                                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information

error: cannot capture late-bound const parameter in a constant
  --> $DIR/capture-late-ct-in-anon.rs:7:30
   |
LL |     for<const C: usize> [(); C + 1]: Copy,
   |         --------------       ^
   |         |
   |         parameter defined here

error: aborting due to previous error; 2 warnings emitted

